--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -581,7 +581,7 @@ function FunctionComponent(props) {
 <FunctionComponent ref3={this.ref3}></FunctionComponent>
 ```
 
-为了规范上面的做法，官方提供了高阶组件来包装函数式组件来实现上面的写法。从能够使用 ref 属性来看，应该是反悔了一个新的 Class 组件
+为了规范上面的做法，官方提供了高阶组件来包装函数式组件来实现上面的写法。通过 forwardRef 可以将 ref 转发到子组件,子组件拿到父组件中创建的 ref，绑定到自己的某一个元素中。从能够使用 ref 属性来看，应该是返回了一个新的 class 组件
 
 ```
 const FunctionComponent = React.forwardRef(function (props, ref) {
@@ -781,83 +781,124 @@ const BoxStyle = styled.div`
 </BoxStyle>
 ```
 
-## 其他知识点
-
-- 组件渲染失败的处理
-
-  在父组件/根组件使用 componentDidCatch 方法监听失败错误，用于记录日志。用 getDerivedStateFromError 方法来更新 state 的状态，一般是使一些错误提示组件取消隐藏
-
-- 组件可以没有根元素
-
-  在 render 函数中，必须要有一个根元素，一般都是 div。在 DOM 节点如果不需要这个根节点，可以使用`<React.Fragment>`包裹，或者使用`<> </>`包裹
-
-- 使用 jQuery
-
-  这一点和 Vue 一样，都是使用 ref。需要注意的是的，在 componentWillUnmount 阶段，记得调用一些 jQuery 插件的销毁时间
-
-- Portals
-
-  默认都是在父组件内渲染，使用 Portals 可以指定渲染的位置
-
-  ```
-  import ReactDOM from 'react-dom'
-
-  class App4 extends React.Component {
-    constructor(props) {
-      super(props)
-      this.slot = document.querySelector('#outer')
-      if (!this.slot) {
-        this.slot = document.createElement('div')
-        this.slot.setAttribute('id', 'outer')
-        document.body.appendChild(this.slot)
-      }
-    }
-    render() {
-      let node = <div>node</div>
-      return ReactDOM.createPortal(node, this.slot)
-    }
-  }
-  ```
-
-- Profiler
-
-  一个工具节点，可以计算子子组件的渲染消耗
-
 ## Hook
 
-Hook 就是 JavaScript 函数，它可以让你在不编写 class 的情况下使用 state 以及其他的 React 特性。简单来说 Hook 就是函数组件的拓展，达到和 class 组件相同的功能，同时写法上也更加简单
+Hook 是函数组件的拓展，在函数组件中使用 Hook 可以达到和 class 组件相同的功能，同时写法上也更加简单。
 
 1. 只能在函数最外层调用 Hook。不要在循环、条件判断或者子函数中调用。避免产生 bug
 
 2. 只能在函数组件和自定义的 Hook 中调用 Hook，不要在其他 JavaScript 函数中调用
 
-useState：返回一个数组，第一个是值，第二个更新值的函数。同时 React 会在重复渲染时保留这个 state。在一个函数组件 useState 可以多次调用，创建多个 state，另外 useState 也可以传入对象和数组
+3. 所有的 hook 都已`use`开头，包括自定义 hook
 
-useEffect：它跟 class 组件中的 componentDidMount、componentDidUpdate 和 componentWillUnmount 具有相同的用途，只不过被合并成了一个 API，相当于声明了一个回调函数，默认情况下，它在第一次渲染之后和每次更新之后都会执行。useEffect 可以调用多次
+- useState
 
-useContext：不用被 Consumer 包裹，也可以在 jsx 外拿到 Context
+  返回一个数组，第一个是值，第二个是更新函数。状态改变时候，函数式组件会被重新调用重新渲染，在重复渲染时会保留这个 state。在一个函数组件 useState 可以多次调用，创建多个 state，另外 useState 也可以传入对象和数组
+
+- useEffect
+
+  用来实现 componentDidMount、componentDidUpdate、componentWillUnmount 这几个生命周期。第二个参数(shouldComponentUpdate)和回调函数的返回值具有重要的意义，使用的时候需要注意。多个 useEffect 的执行按照他们的定义顺序执行
+
+- useContext
+
+  虽说在函数式组件中也可以使用 Context，但是使用 useContext 可以不用被 Consumer 包裹了，等价于 class 组件的 contextType
+
+- useReducer
+
+  对于简单的状态，可以使用多个 useState，但是状态多且更新逻辑复杂时可以使用 useReducer。和 redux 的思想很像。
+
+- useMemo
+
+  可以理解为 Vue 中的计算属性，假设有 var1，var2，var3=va1\*va1,当 var2 更新时，函数组件重新渲染，var3 有被重新计算，但实际上 va3 并没有依赖 var2，这时就可以使用 useMemo 了，避免重新计算。
+
+- useCallback
+
+  和 useMemo 一样，只不过返回的是函数，如果依赖没有改变，则不会去创建新的函数。可以使用 set 去验证效果
+
+- useRef
+
+  能够拿到子组件/DOM 的实例
+
+- useImperativeHandle
+
+  对 forwardRef 返回的 ref 做限制，只暴露出固定的操作
+
+- useLayoutEffect
+
+  会在渲染的内容更新到 DOM 上之前执行，会阻塞 DOM 的更新。因为 useEffect 是异步的，有时候在 useEffect 中去改变 state 会导致循环渲染，可以通过 useLayoutEffect 来解决这个问题
 
 ```
-import React, { useState } from 'react'
+import React, { useState, useEffect, useReducer } from 'react'
+
+function countReducer(state, action) {
+  switch (action.type) {
+    case 'inc':
+      return { ...state, count: state.count + 1 }
+    case 'dec':
+      return { ...state, count: state.count - 1 }
+    default:
+      return state
+  }
+}
 
 function Example(props) {
+  const [state, dispatch] = useReducer(countReducer, { count: 0 })
+
   // 数组的解构赋值的语法， useState 返回一个数组
   const [count, setCount] = useState(0)
   const [value, setValue] = useState(0)
 
-  // 在useEffect内调用update时，要给定 dependences 列表，防止无限更新
+  // componentDidMount，适合初始化一些依赖DOM的插件
   useEffect(() => {
-    setValue(count * count)
-  }, [count])
+    console.log('componentDidMount')
+    // 若返回函数会在componentWillUnmount时候执行，适合清除插件事件
+    return () => {
+      console.log('componentWillUnmount')
+    }
+  }, [])
+
+  // componentDidMount + componentDidUpdate
+  useEffect(() => {
+    console.log('componentDidUpdate')
+  })
+
+  // componentDidMount + shouldComponentUpdate
+  useEffect(() => {
+    console.log('shouldComponentUpdate on value change')
+  }, [value])
 
   return (
     <div>
-      <p>
-        You clicked {count} computed: {value}
-      </p>
-      <button onClick={() => setCount(count + 1)}>Click me</button>
+      <div>
+        <span>count: {count}</span>
+        <button onClick={() => setCount(count + 1)}>Click me</button>
+      </div>
+      <div>
+        <span>value: {value}</span>
+        <button onClick={() => setValue(count + 1)}>Click me</button>
+      </div>
+      <div>
+        <span>count: {state.count}</span>
+        <button onClick={() => dispatch({ type: 'inc' })}>inc</button>
+        <button onClick={() => dispatch({ type: 'dec' })}>dec</button>
+      </div>
     </div>
   )
+}
+```
+
+有时候为了复用逻辑，可以自定义 hook。但是注意名字一定要以 use 开头
+
+比如下面实现了一个在函数组件生命周期中打印日志的 hook，在对应的组件内直接调用`useLogger()`就可以了
+
+```
+function useLogger() {
+  useEffect(() => {
+    console.log('组件 mounted')
+    return () => {
+      console.log('组件 unmounted')
+    }
+  }, [])
 }
 ```
 
@@ -901,7 +942,7 @@ index.js
 
 感觉 React 的一些概念很难搞懂，比如 Render Props、Hook。相比较而言还是 Vue 的一些概念简单易懂，也可能是 Vue 的中文文档写的比较好吧。
 
-其次就是性能，稍微写的不规范就可能导致整个页面重新渲染。
+其次就是性能，慢脑子的想我这样会不会导致组件/子组件全部重新渲染，而 Vue 就不会有这种心智负担.
 
 还有就是脚手架，官方的 create-react-app 可以说没留给用户配置的地方，除非你把 webpack 的配置给弹射出来去手动配置，相比较之下 Vue-cli 真的是非常人性化了。不过还好可以使用 UmiJS 这类的第三方脚手架
 
@@ -926,3 +967,5 @@ index.js
 [React 系列（十） - 高阶组件以及组件补充](https://mp.weixin.qq.com/s/Fgfu2kwLBJJOnGEXoKsvpg)
 
 [React 系列（十一） - React 中的 CSS](https://mp.weixin.qq.com/s/oywTpNKEikMXn8QTBgITow)
+
+[React 系列（二十一） - Hook（二）高级使用](https://mp.weixin.qq.com/s/8rzXCEYMpDvxMSUI5wj8bA)
