--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -363,44 +363,32 @@ yum install java-1.8.0-openjdk-devel.x86_64
 
 安装完成后，还会在`/usr/lib/jvm/`，`/etc/alternatives/`创建多个链接
 
-推荐直接绿色安装
-
-然后配置下环境即可，好处是方便装多个版本进行切换，个人喜欢解压到`/usr/local/java/`
+**推荐直接绿色安装**，然后配置下环境即可，好处是方便装多个版本进行切换，个人喜欢解压到`/usr/local/java/`
 
 ### 环境变量配置
 
 修改`/etc/profile`文件，后面追加如下内容，修改完后`source /etc/profile;echo $JAVA_HOME`
 
 ```sh
-JAVA_HOME=/usr/local/java/jdk1.8.0_202
-JRE_HOME=/usr/local/java/jdk1.8.0_202/jre
-
-PATH=$PATH:$JAVA_HOME/bin
-
-export JAVA_HOME JRE_HOME PATH
+export JAVA_HOME=/usr/local/java/jdk1.8.0_202
+export JRE_HOME=/usr/local/java/jdk1.8.0_202/jre
+export PATH=$PATH:$JAVA_HOME/bin
 ```
 
 ### Tomcat 安装
 
-直接去官方下载 zip 包，装好 Java 环境后直接就启动了
+直接去官方下载 zip 包，配置好 Java 环境后就能直接启动了
 
 ```sh
-wget https://mirrors.tuna.tsinghua.edu.cn/apache/tomcat/tomcat-8/v8.5.41/bin/apache-tomcat-8.5.41.tar.gz
-
-tar -zxvf apache-tomcat-8.5.41.tar.gz
 mkdir -p /usr/local/tomcat
-mv apache-tomcat-8.5.41 /usr/local/tomcat/
+cd /usr/local/tomcat
+wget https://mirrors.tuna.tsinghua.edu.cn/apache/tomcat/tomcat-8/v8.5.59/bin/apache-tomcat-8.5.59.tar.gz
+tar -zxvf apache-tomcat-8.5.59.tar.gz
 ```
 
-追加启动命令到`/etc/rc.d/rc.local`，方便开机自启
+启动脚本: `/usr/local/tomcat/apache-tomcat-8.5.59/bin/startup.sh`
 
-```sh
-/usr/local/tomcat/apache-tomcat-8.5.41/bin/startup.sh
-```
-
-如果在你的机器上运行`dd if=/dev/random of=random.dat count=40960`非常慢的话，tomcat 启动超级超级慢。
-系统会收集运行状态如流量，CPU，键盘录入等信息，来产生的熵去生成真正的随机数。
-由于大部分的云主机熵值都不够，导致启动时卡在这里。可以用 urandom(伪随机) 来替代 random 来生成随机数即可
+如果在你的机器上运行`dd if=/dev/random of=random.dat count=40960`非常慢的话，tomcat 启动超级超级慢。因为系统会收集运行状态如流量，CPU，键盘录入等信息，来产生的熵去生成真正的随机数。由于大部分的云主机熵值都不够，导致启动时卡在这里。可以用 urandom(伪随机) 来替代 random 来生成随机数即可
 
 方法很简单，修改 Tomcat 的的启动参数，指定使用 urandom 或者修改 JDK 的配置指定使用 urandom
 
@@ -449,7 +437,7 @@ php -v
 php -m
 ```
 
-配置文件位于`/etc/php.ini`和`/etc/php-fpm.d/www.conf`,小内存建议调整下php-fpm
+配置文件位于`/etc/php.ini`和`/etc/php-fpm.d/www.conf`,小内存建议调整下 php-fpm
 
 ```conf
 pm = dynamic
@@ -470,9 +458,7 @@ systemctl enable php-fpm
 
 ```sh
 # 安装包 提供的拓展
-php70w mod_php, php70w-zts
-php70w-bcmath
-php70w-cli php-cgi, php-pcntl, php-readline
+php70w mod_php php70w-zts php70w-bcmath php70w-cli php-cgi php-pcntl, php-readline
 php70w-common php-api, php-bz2, php-calendar, php-ctype, php-curl, php-date, php-exif, php-fileinfo, php-filter, php-ftp, php-gettext, php-gmp, php-hash, php-iconv, php-json, php-libxml, php-openssl, php-pcre, php-pecl-Fileinfo, php-pecl-phar, php-pecl-zip, php-reflection, php-session, php-shmop, php-simplexml , php-sockets, php-spl, php-tokenizer, php-zend-abi, php-zip, php-zlib
 php70w-dba
 php70w-devel
@@ -517,22 +503,19 @@ php70w-xmlrpc
 mkdir -p /usr/local/go
 mkdir -p /usr/local/go/gopath
 cd /usr/local/go
-wget https://dl.google.com/go/go1.12.5.linux-amd64.tar.gz
-tar -zxvf go1.12.5.linux-amd64.tar.gz
-mv go go_1.12.5
+wget https://dl.google.com/go/go1.15.3.linux-amd64.tar.gz
+tar -zxvf go1.15.3.linux-amd64.tar.gz
+mv go go_1.15.3
 ```
 
 配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
 
 ```sh
-# Golang 环境变量
-GOROOT=/usr/local/go/go_1.11.10
-GOPATH=/usr/local/go/gopath
-GO111MODULE=on
-GOPROXY=https://goproxy.cn
-PATH=$PATH:$GOROOT/bin:$GOPATH/bin
-
-export GOROOT GOPATH GO111MODULE GOPROXY PATH
+export GOROOT=/usr/local/go/go_1.15.3
+export GOPATH=/usr/local/go/gopath
+export GO111MODULE=on
+export GOPROXY=https://goproxy.cn,direct
+export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 ```
 
 ## NodeJS
@@ -540,27 +523,25 @@ export GOROOT GOPATH GO111MODULE GOPROXY PATH
 ```sh
 mkdir -p /usr/local/nodejs
 cd /usr/local/nodejs
-wget https://nodejs.org/dist/v10.16.0/node-v10.16.0-linux-x64.tar.xz
-xz -d node-v10.16.0-linux-x64.tar.xz
-tar -xvf node-v10.16.0-linux-x64.tar
+wget https://nodejs.org/dist/v12.19.0/node-v12.19.0-linux-x64.tar.xz
+xz -d node-v12.19.0-linux-x64.tar.xz
+tar -xvf node-v12.19.0-linux-x64.tar
 ```
 
 配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
 
 ```sh
-# NodeJS 环境变量
-NODE_HOME=/usr/local/nodejs/node-v10.16.0-linux-x64
-NODE_GLOBAL_MODEL=/usr/local/nodejs/node_global
-PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin
-
-export NODE_HOME PATH
+export NODE_HOME=/usr/local/nodejs/node-v12.19.0-linux-x64
+export NODE_GLOBAL_MODEL=/usr/local/nodejs/node_global
+export PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin
 ```
 
-配置
+配置 `~/.npmrc`
 
 ```sh
 npm config set prefix "/usr/local/nodejs/node_global"
 npm config set cache "/usr/local/nodejs/node_cache"
+npm config set registry https://registry.npm.taobao.org
 # 全局装个软件试一下
 npm install -g hexo-cli
 ```
@@ -694,29 +675,33 @@ gem install bundler
 
 ## 设置开机自启动脚本
 
-开机启动后要执行的命令可以追加在`rc.local`后面，如下
+编写 unit 配置`tomcat.service`来做到开机自启，然后拷贝到`/usr/lib/systemd/system/`目录后即可。
+
+通过 `systemctl [status|start|stop|restart|enable|disable] tomcat.service` 来控制启动，通过`journalctl -f -u tomcat.service`来查看日志
+
+```ini
+[Unit]
+Description=Tomcat服务器
+After=network-online.target mysqld.service
+Wants=mysqld.service
+
+[Service]
+Type=forking
+EnvironmentFile=/myapps/env # 读不到系统的环境变量需要写一个环境变量的配置文件指定 PATH JAVA_HOME JRE_HOME
+ExecStart=/usr/local/tomcat/apache-tomcat-8.5.59/bin/catalina.sh start
+ExecReload=/usr/local/tomcat/apache-tomcat-8.5.59/bin/catalina.sh restart
+ExecStop=/usr/local/tomcat/apache-tomcat-8.5.59/bin/catalina.sh stop
+
+[Install]
+WantedBy=multi-user.target
+```
+
+另外图方便可以直接把开机启动后要执行的命令可以追加在`rc.local`后面，若启动的是脚本记得给执行权限
 
 ```sh
-# 开机启动,auto-start.sh记得给执行权限
-/server-apps/auto-start.sh >/server-apps/auto-start.log 2>&1
+/usr/local/tomcat/apache-tomcat-8.5.59/bin/startup.sh
+# 或者可以写个独立的脚本追加在后面执行，避免频繁修改系统配置
+# /server-apps/auto-start.sh >/server-apps/auto-start.log 2>&1
 ```
 
 以后在`/server-apps/auto-start.sh`中添加启动命令就成了。注意在 centos7 中，`/etc/rc.d/rc.local`的权限被降低了，所以需要`chmod +x /etc/rc.d/rc.local`
-
-auto-start.sh
-
-```sh
-#!/bin/sh
-
-# mysql
-systemctl start mysqld
-
-# nginx
-/usr/local/nginx/sbin/nginx
-
-# tomcat
-/usr/local/tomcat/apache-tomcat-8.5.41/bin/startup.sh
-
-# php
-systemctl start php-fpm
-```
