--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -192,7 +192,9 @@ class App2 extends React.Component {
 }
 ```
 
-## setState 基本使用
+## setState 与纯函数
+
+state 要修改的项尽量不去直接改变，而是返回一个新的数据
 
 修改 object 中某项
 
@@ -205,10 +207,11 @@ this.setState({
 数组操作
 
 ```js
-array.splice(index, 1)
-array.push(99)
+temp = array.slice(0)
+temp.splice(index, 1)
+temp.push(99)
 this.setState({
-  array: array
+  array: temp
 })
 ```
 
@@ -222,7 +225,7 @@ this.setState(prevState => return newState)
 
 ## 组件性能优化
 
-有时 state 里面的数据是不和视图渲染绑定的，每次 setState 都会触发重新渲染。通过`shouldComponentUpdate`生命周期函数，我们可以拿到 state 和 props 变化后还未更新上去的值和当前 state 进行手动比较来判断是否需要渲染。默认情况下，该函数始终返回 true，也就是只要 state 发生改变，就会调用 render 方放法。
+每次 setState 都会触发子组件的重新渲染。通过`shouldComponentUpdate`生命周期函数，我们可以拿到 state 和 props 变化后还未更新上去的值和当前 state 进行手动比较来判断是否需要渲染。默认情况下，该函数始终返回 true，也就是只要 state 发生改变，就会调用 render 方放法。
 
 为了避免所有的组件类都需要重写`shouldComponentUpdate`函数，只需要继承 PureComponent 就行了，他对 props 和 state 进行浅层比较，对于函数式组件同样提供了`memo`高阶组件进行包裹。
 
@@ -969,3 +972,5 @@ index.js
 [React 系列（十一） - React 中的 CSS](https://mp.weixin.qq.com/s/oywTpNKEikMXn8QTBgITow)
 
 [React 系列（二十一） - Hook（二）高级使用](https://mp.weixin.qq.com/s/8rzXCEYMpDvxMSUI5wj8bA)
+
+[从零搭建 React 全家桶框架教程](https://github.com/brickspert/blog/issues/1)
