--- a/_posts/2020-10-06-像图片一样缩放svg.md
+++ b/_posts/2020-10-06-像图片一样缩放svg.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 像图片一样缩放SVG
-categories: [Python]
+categories: [前端]
 ---
 
 最近在做一个 OCR 相关的功能，需要高亮圈出文字的范围。接口调用的是腾讯的表格识别，结果里面已经返回了 polygon 的坐标点信息，所以很容易就想到在前端使用 svg 绘制 polygon 然后覆盖在在图片上。
