--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -115,6 +115,16 @@ yum install kde-l10n-Chinese
 vi /etc/locale.conf
 ```
 
+vim配置 `~/.vimrc`
+
+```sh
+set langmenu=zh_CN.UTF-8
+language message zh_CN.UTF-8
+set encoding=utf-8
+set termencoding=utf-8
+set fileencodings=ucs-bom,utf-8,cp936,gb18030,big5,euc-jp,euc-kr,latin1
+```
+
 ## Nginx
 
 ### 安装
