--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -115,7 +115,7 @@ yum install kde-l10n-Chinese
 vi /etc/locale.conf
 ```
 
-vim配置 `~/.vimrc`
+vim配置 `~/.vimrc`，文件的换行符记得设置为unix风格的，不然会报错
 
 ```sh
 set langmenu=zh_CN.UTF-8
@@ -338,6 +338,7 @@ socket=/var/lib/mysql/mysql.sock
 symbolic-links=0
 log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
+bind-address=0.0.0.0 # 不监听ipv6
 
 # 编码设置
 character-set-client-handshake = FALSE
@@ -575,7 +576,7 @@ export PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin
 ```sh
 npm config set prefix "/usr/local/nodejs/node_global"
 npm config set cache "/usr/local/nodejs/node_cache"
-npm config set registry https://registry.npm.taobao.org
+npm config set registry "http://mirrors.cloud.tencent.com/npm/"
 # 全局装个软件试一下
 npm install -g hexo-cli
 ```
