--- a/_posts/2020-10-06-像图片一样缩放svg.md
+++ b/_posts/2020-10-06-像图片一样缩放svg.md
@@ -89,6 +89,16 @@ function initSVG(points) {
 }
 ```
 
+## 拓展
+
+实现一个图片剪裁展示的效果，比如雪碧图，一般写法如下
+
+![03](03.png)
+
+上面的缺点同样很明显，宽高是定死的，无法自适应，通过SVG同样也可以解决这个问题
+
+![04](04.png)
+
 ## 总结
 
 一个小坑，不要使用 jquery 的 attr 来操作 svg 属性，比如用 jquery 设置 viewBox 属性，发现设置到 dom 上变成了小写，导致不生效
