跟随系统暗色模式

--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -115,7 +115,7 @@ yum install kde-l10n-Chinese
 vi /etc/locale.conf
 ```
 
-vim配置 `~/.vimrc`，文件的换行符记得设置为unix风格的，不然会报错
+vim 配置 `~/.vimrc`，文件的换行符记得设置为 unix 风格的，不然会报错
 
 ```sh
 set langmenu=zh_CN.UTF-8
@@ -313,6 +313,12 @@ grant all privileges on *.* to 'root'@'%' identified by '设置新用户密码';
 flush privileges;
 ```
 
+有时候防火墙，安全组都放开了，远程登录也允许了，远程仍然无法访问的话可以看下 mysql 监听的网卡,如果是 127.0.0.1 的话要改成 0.0.0.0
+
+```
+netstat -nltp
+```
+
 ### 配置
 
 配置编码为 utf8mb4，从而支持 emoji 表情
@@ -338,7 +344,7 @@ socket=/var/lib/mysql/mysql.sock
 symbolic-links=0
 log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
-bind-address=0.0.0.0 # 不监听ipv6
+bind-address=0.0.0.0
 
 # 编码设置
 character-set-client-handshake = FALSE
