--- a/_posts/2019-09-21-留言板功能迁移到吐个槽.md
+++ b/_posts/2019-09-21-留言板功能迁移到吐个槽.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 留言板功能迁移到吐个槽
-categories: [建站]
+categories: [Jekyll]
 ---
 
 今天打开博客的留言板发现已经无法加载出留言了，去了 Bmob 的官网才知道要实名认证了，看了下实名认证需要一张手持身份证的照片，想想还是算了。
