--- a/_posts/2019-03-08-docker的使用.md
+++ b/_posts/2019-03-08-docker的使用.md
@@ -8,28 +8,18 @@ Docker 是 Linux 虚拟化的一种封装，提供简单易用的容器使用接
 
 说到虚拟化，很容易想到虚拟器。Docker 和虚拟机有很大的区别，虚拟机一般是在系统上运行的另外一个系统，需要消耗大量的系统资源，而 Docker 可以理解为一个系统上的不同用户，他们都是运行的同一个系统上，性能消耗少，而且启动速度很快。
 
-有点像网吧公用一台主机，然后每台机器都有自己的局域网 ip 和操作系统
+## Linux 下安装
 
-## 升级内核
+这里使用的 Centos7，Docker 要求 CentOS 系统的内核版本高于 3.10，如果你的内核版本过低需要升级内核才能支持 Docker
 
 注意 OpenVZ 架构的 VPS 是不支持升级内核的，KVM 是支持的，或者使用云服务器。
-
-Docker 要求 CentOS 系统的内核版本高于 3.10，如果你的内核版本过低需要升级内核才能支持 Docker
 
 ```
 more /etc/centos-release # 查看centos系统版本
 uname -r # 查看内核版本
 ```
 
-升级内核,我直接安装就成功了。不行的话去网上找下教程
-
-```
-yum install kernel
-```
-
-## 安装 Docker
-
-安装失败的话导入下官方的源就行了，[这里是官方的教程](https://docs.docker.com/install/linux/docker-ce/centos/)
+如果没有源的话导入下官方的源就行了，[这里是官方的教程](https://docs.docker.com/install/linux/docker-ce/centos/)
 
 ```
 # 卸载旧版本
@@ -66,6 +56,85 @@ Server:
  Experimental:    false
 ```
 
+## Windows 下安装
+
+有两个 Docker for Windows 和 Docker Toolbox，二者的工作原理都是在虚拟机的 Linux 环境下安装 Docker
+
+Docker for Windows 使用的是 Windows 自带的 Hyper-v 虚拟技术，因此对系统的要求是 Win10 专业版
+
+Docker Toolbox 则使用的是 Virtualbox，如果本机已经安装过 Virtualbox 在安装过程中可以选择不安装 Virtualbox，
+
+通过 `docker-machine` 命令，可以创建一个 运行 docker 的运行环境，通过`docker-machine env`切换不同的 docker 环境。从这里也可以看到在 windows 上执行的 docker 命令其实是转发到 Linux 里面的(TCP)
+
+注意 docker-machine 在创建虚拟机的过程中会去 Github 上下载最新的系统镜像，由于网路原因等待过程可能会很久，也可以自己手动去下载然后放到`~/.docker/machine/cache/boot2docker.iso`。
+
+```sh
+# Docker安装目录下，在git-bash通过执行脚本创建
+./start.sh
+
+## 也可以手动创建运行环境
+docker-machine create -d virtualbox default
+docker-machine start default
+docker-machine env default
+docker-machine ls
+docker-machine ssh default
+```
+
+创建完毕，`docker info` 若显示无法连接服务端，由于每次重启 IP 会变化，需要更新下 IP 到环境变量里面，再重启终端就好了
+
+```
+docker-machine restart default
+docker-machine env default # 将default机器的连接IP写到环境变量
+# 关闭终端重新进入刷新最新的环境变量，再次查看应该就成功了
+docker info
+```
+
+## Registry 仓库
+
+docker 镜像托管和 git 仓库托管是很像的，对比 GitHub ，官方的镜像仓库是[Docker Hub](https://hub.docker.com)，拥有大量的高质量的官方镜像，当拉取镜像时，默认使用的也是改镜像。
+
+由于国内网络环境下载镜像很慢，可以通过配置仓库的镜像地址加速下载
+
+Linux 环境下更改配置文件`/etc/docker/daemon.json`
+
+```json
+{
+  "registry-mirrors": ["https://hub-mirror.c.163.com", "https://docker.mirrors.ustc.edu.cn"]
+}
+```
+
+```sh
+systemctl restart docker
+docker info # Registry Mirrors
+```
+
+Windows 的 Docker Toolbox 环境下
+
+```
+docker-machine ssh default
+sudo vi /var/lib/boot2docker/profile # linux 环境，
+docker-machine stop
+docker-machine start
+```
+
+修改内容,在 EXTRA_ARGS 参数下追加`--registry-mirror`
+
+```
+EXTRA_ARGS='
+--label provider=virtualbox
+--registry-mirror https://hub-mirror.c.163.com
+--registry-mirror https://docker.mirrors.ustc.edu.cn
+'
+```
+
+除了下载外，你也可以推送镜像到仓库，以阿里云的容器镜像服务为例
+
+```sh
+docker tag nginx registry.cn-hangzhou.aliyuncs.com/xxx/xxx
+docker login --username=177****@qq.com registry.cn-hangzhou.aliyuncs.com
+docker push registry.cn-hangzhou.aliyuncs.com/xxx/xxx
+```
+
 ## image 相关命令
 
 Docker 把应用程序及其依赖打包在 image 文件里面。
@@ -79,8 +148,10 @@ docker image ls
 # 删除镜像，若改镜像已生成容器实例，需要把所有实例删除才可以删除镜像
 docker image rm [imageName]
 
-# 从远端下载镜像，比如从官方库下载hello-world项目docker image pull library/hello-world
-docker image pull [path]
+# 从远端下载镜像，比如从官方库下载hello-world项目docker image pull [域名/IP][:端口/][用户名/][项目名][:标签]
+# 除了项目名外都有默认值，下面的两条命令是等价的
+docker image pull docker.io/library/hello-world:latest
+docker image pull hello-world
 ```
 
 ## container 相关命令
@@ -168,10 +239,6 @@ MYSQL_MAJOR=8.0
 MYSQL_VERSION=8.0.15-1debian9
 HOME=/root
 ```
-
-## 使用官方镜像仓库
-
-Docker 官方的镜像仓库是[docker hub](https://hub.docker.com),如果速度慢可以使用国内的阿里云的镜像仓库
 
 ### 安装 tomcat
 
@@ -334,14 +401,18 @@ EXPOSE 8080
 
 运行镜像`docker container run -p 80:8080 tomcat-with-app01`
 
+## 注意
+
+在 Docker Toolbox 环境下，容器绑定宿主机端口后并不能通过 127.0.0.1，因为在 Docker Toolbox 环境下宿主机是虚拟机， 应使用`docker-machine ip default`去访问
+
 ## 参考
 
 [Docker 官方文档](https://docs.docker.com/install/linux/docker-ce/centos/)
-
-[docker hub](https://hub.docker.com)
 
 [阮一峰 - Docker 入门教程](http://www.ruanyifeng.com/blog/2018/02/docker-tutorial.html)
 
 [阮一峰 - Docker 微服务教程](http://www.ruanyifeng.com/blog/2018/02/docker-wordpress-tutorial.html)
 
 [菜鸟教程 - Docker 命令大全](http://www.runoob.com/docker/docker-command-manual.html)
+
+[Docker 从入门到实践 ](https://vuepress.mirror.docker-practice.com/)
