--- a/_posts/2019-03-08-docker的使用.md
+++ b/_posts/2019-03-08-docker的使用.md
@@ -130,9 +130,9 @@ EXTRA_ARGS='
 除了下载外，你也可以推送镜像到仓库，以阿里云的容器镜像服务为例
 
 ```sh
-docker tag nginx registry.cn-hangzhou.aliyuncs.com/xxx/xxx
+docker tag nginx registry.cn-hangzhou.aliyuncs.com/xxx/xxx:v1.0
 docker login --username=177****@qq.com registry.cn-hangzhou.aliyuncs.com
-docker push registry.cn-hangzhou.aliyuncs.com/xxx/xxx
+docker push registry.cn-hangzhou.aliyuncs.com/xxx/xxx:v1.0
 ```
 
 ## image 相关命令
@@ -147,6 +147,7 @@ docker image ls
 
 # 删除镜像，若改镜像已生成容器实例，需要把所有实例删除才可以删除镜像
 docker image rm [imageName]
+docker rmi
 
 # 从远端下载镜像，比如从官方库下载hello-world项目docker image pull [域名/IP][:端口/][用户名/][项目名][:标签]
 # 除了项目名外都有默认值，下面的两条命令是等价的
@@ -196,6 +197,17 @@ docker container kill [containerID]
 # 应用程序收到 SIGTERM 信号以后，可以自行进行收尾清理工作。
 docker container stop [containerID]
 ```
+
+如果需要查看容器创建时的启动命令，可以使用 inspect，不过内容太多，可以使用`runlike`
+
+```
+docker container inspect 3186de74c6be
+
+pip3 install runlike
+runlike 3186de74c6be
+```
+
+![runlike](runlike.jpg)
 
 ## 其他命令
 
@@ -378,28 +390,42 @@ root_app02_1   docker-entrypoint.sh mysqld   Up      3306/tcp, 33060/tcp
 
 ## 自定义镜像
 
-还可以自己编写 Dockerfile 来生成自定义镜像
+有两种方式创建属于自己的镜像
 
-```
-mkdir app
-cd app
-cp -r /home/app01 .
-touch Dockerfile
-```
+1. 根据 container 生成镜像
 
-编写 Dockerfile，这样就把我们的 app01 变成了一个镜像文件。
+   进入到一个运行的容器中,比如执行一些操作如安装软件，然后再提交改变生成镜像
 
-关于 mysql，我们可以`FROM centos`从零下载安装 Java，tomcat，mysql，然后形成一个 tomcat-mysql-app01 的镜像文件，这种目前水平写不出来
+   ```
+   docker container exec -it 1a548378cf20 sh
+   touch demo.txt
+   exit
+   docker container stop 1a548378cf20
+   # docker container diff 1a548378cf20
+   docker commit -m "install app" 1a548378cf20 customer-image:v1.0.1
+   docker image ls
+   # docker push customer-image:v1.0.1
+   # docker run -p 10086:80 -d customer-image:v1.0.1
+   ```
 
-```
-FROM tomcat
-COPY ./app01 /usr/local/tomcat/webapps/app01
-EXPOSE 8080
-```
+2. 通过 Dockerfile 来生成自定义镜像
 
-构建 image`docker image build -t tomcat-with-app01 .`
+   注意，每次的 RUN/COPY 等操作都会生成一层，为了镜像的大小可以吧多个 RUN 的命令合并成一个
 
-运行镜像`docker container run -p 80:8080 tomcat-with-app01`
+   ```
+   FROM openjdk:8
+   # RUN mkdir -p /work
+   COPY ./demo.jar /work/demo.jar
+   WORKDIR /work
+   CMD [ "java", "-jar", "demo.jar" ]
+   EXPOSE 80
+   ```
+
+   生成镜像，注意所处的目录不要有多余的文件，因为会把当前目录临时拷贝到容器内
+
+   ```sh
+   docker image build -t spring:v1.0.0 .
+   ```
 
 ## 注意
 
@@ -416,3 +442,5 @@ EXPOSE 8080
 [菜鸟教程 - Docker 命令大全](http://www.runoob.com/docker/docker-command-manual.html)
 
 [Docker 从入门到实践 ](https://vuepress.mirror.docker-practice.com/)
+
+[减小 Docker 镜像体积](https://hui.lu/reduce-docker-image-size/)
