--- a/_posts/2017-08-15-原生js插件封装.md
+++ b/_posts/2017-08-15-原生js插件封装.md
@@ -33,7 +33,7 @@ categories: [前端]
 故需将插件的所有功能写在一个立即执行函数中：
 
 ```js
-;(function() {
+;(function () {
   //插件所有功能都写在这个函数下
 })()
 ```
@@ -59,7 +59,7 @@ var options = {
 
 ```js
 var api = {
-  config: function(ops) {
+  config: function (ops) {
     //....
     return this //便于链式调用
   },
@@ -67,10 +67,10 @@ var api = {
     //...
     return this
   },
-  feature1: function() {
+  feature1: function () {
     //...
   },
-  feature2: function() {
+  feature2: function () {
     //...
   }
 }
@@ -82,7 +82,7 @@ this.pluginName = api
 根据上述步骤
 
 ```js
-;(function() {
+;(function () {
   //配置-私有的
   var options = {
     // ....
@@ -96,7 +96,7 @@ this.pluginName = api
   //API
   var api = {
     //配置参数
-    config: function(opts) {
+    config: function (opts) {
       if (!opts) return options
       for (var key in opts) {
         options[key] = opts[key]
@@ -139,7 +139,7 @@ this.pluginName = api
 下面是一个简单的 jsonp 插件代码
 
 ```js
-;(function() {
+;(function () {
   //主要函数
   function main(options, callbackfunc) {
     //产生一个随机函数名
@@ -158,7 +158,7 @@ this.pluginName = api
     oHead.appendChild(oS)
 
     //创建jsonp回调函数
-    window[callbackName] = function(json) {
+    window[callbackName] = function (json) {
       oHead.removeChild(oS)
       clearTimeout(oS.timer)
       window[callbackName] = null
@@ -166,7 +166,7 @@ this.pluginName = api
     }
 
     //超时处理
-    oS.timer = setTimeout(function() {
+    oS.timer = setTimeout(function () {
       window[callbackName] = null
       oHead.removeChild(oS)
       callbackfunc(null)
@@ -185,7 +185,7 @@ this.pluginName = api
   }
 
   var api = {
-    execute: function(opt, callbackfunc) {
+    execute: function (opt, callbackfunc) {
       options = {
         parm: {},
         time: 3000,
@@ -212,3 +212,7 @@ this.pluginName = api
 ## 参考
 
 [原生 JavaScript 插件编写指南](http://geocld.github.io/2016/03/10/javascript_plugin/)
+
+[Javascript 模块化编程（一）：模块的写法](http://www.ruanyifeng.com/blog/2012/10/javascript_module.html)
+
+[Javascript 模块化编程（二）：AMD 规范](http://www.ruanyifeng.com/blog/2012/10/asynchronous_module_definition.html)
