--- a/_posts/2020-06-03-发布自己的npm包.md
+++ b/_posts/2020-06-03-发布自己的npm包.md
@@ -60,6 +60,24 @@ module.exports = {
 }
 ```
 
+## cli
+
+一些 cli 程序全局安装后是可以直接通过命令行去执行的，比如`npm install -g hexo-cli`。其实只要在`package.json`配置好下就好了
+
+```json
+{
+  "bin": {
+    "hexo": "./bin/hexo"
+  }
+}
+```
+
+另外文件的第一行一定要写上解释器，不然的话会直接执行 js 文件就报错了。这也说明 npm 也是可以托管二进制可执行文件的
+
+```
+#!/usr/bin/env node
+```
+
 ## 打包规范
 
 上面的打包还是有问题的，全局变量是直接绑定在 window 上的，难免会有变量名的冲突，且不符合模块化的规范，其实 webpack 在打包的时候是可以设置输出为各种规范下的文件的
@@ -156,3 +174,5 @@ npm view pkgname versions # 查看所有版本
 ## 参考
 
 [npm 发布包教程（二）：发布包](https://segmentfault.com/a/1190000017463371)
+
+[package.json | npm Docs](https://docs.npmjs.com/cli/v7/configuring-npm/package-json#workspaces)
