--- a/_posts/2020-06-03-发布自己的npm包.md
+++ b/_posts/2020-06-03-发布自己的npm包.md
@@ -16,7 +16,7 @@ categories: [前端]
 npm init
 ```
 
-为了代码的通用性，别人使用你的库不需要再安装第三方库,请使用 Nodejs 支持的 CommonJS 模块规范来导入导出代码
+为了代码的通用性，当不使用 webpack 等工具发布 dist 包的话，那么在代码内引用库的话最好使用 Nodejs 支持的 CommonJS (require)规范来导入，从而避免别人使用你的库还需要再安装 Babel。在导出模块时可以做兼容同时支持 ES Module 和 CommonJS。
 
 ```js
 const utf8 = require('../utf8/index.js')
@@ -25,6 +25,24 @@ module.exports = {
   encode: btoa,
   decode: atob
 }
+```
+
+兼容多种导出的写法
+
+```js
+!(function (t, r) {
+  'object' == typeof exports && 'object' == typeof module
+    ? (module.exports = r())
+    : 'function' == typeof define && define.amd
+    ? define('kit', [], r)
+    : 'object' == typeof exports
+    ? (exports.kit = r())
+    : (t.kit = r())
+})(this, function () {
+  return {
+    // base64: base64
+  }
+})
 ```
 
 代码编写到这里就完成了，发布上去可以被其他库引用了，而且还是按需加载的，用到那个就去引入那个。但是有时候，除了在 Node 项目中引用，还需要在浏览器中进入 js 文件，这时候就要用到 webpack 了
@@ -129,6 +147,24 @@ let base64Str = '5L2g5aW9IGtpdA=='
 
 assert(base64Str === kit.base64.encode(rawStr), 'base64.encode')
 assert(rawStr === kit.base64.decode(base64Str), 'base64.decode')
+```
+
+当测试文件过多时，可以以考虑把测试项目单独形成一个项目，这就涉及到如何在本地调试 npm 包了
+
+一种方式是使用 [npm link](https://docs.npmjs.com/cli/v7/commands/npm-link) 命令将项目临时放到全局 node_modules 目录里面，还有一种方式是 npm 是支持安装本地包的 😁
+
+```
+npm install -S F:/npm-hello
+npm install -S ../npm-hello
+```
+
+```json
+{
+  "dependencies": {
+    "@tmaize/hello": "file:F:/npm-hello",
+    "@tmaize/hello": "file:../npm-hello"
+  }
+}
 ```
 
 ## 发布那些文件
