--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -574,18 +574,24 @@ tar -xvf node-v12.19.0-linux-x64.tar
 ```sh
 export NODE_HOME=/usr/local/nodejs/node-v12.19.0-linux-x64
 export NODE_GLOBAL_MODEL=/usr/local/nodejs/node_global
-export PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin
+export YARN_INSTALL=/usr/local/nodejs/yarn_bin
+export PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin:$YARN_INSTALL/bin
 ```
 
-配置 `~/.npmrc`
+配置 `~/.npmrc`、`/usr/local/share/.yarnrc`
 
 ```sh
 npm config set prefix "/usr/local/nodejs/node_global"
 npm config set cache "/usr/local/nodejs/node_cache"
 npm config set registry "http://mirrors.cloud.tencent.com/npm/"
-# 全局装个软件试一下
-npm install -g hexo-cli
+
+npm install -g yarn
+yarn config set cache-folder "/usr/local/nodejs/yarn_cache"
+yarn config set global-folder "/usr/local/nodejs/yarn_global"
+yarn config set prefix "/usr/local/nodejs/yarn_bin"
 ```
+
+查看 yarn 配置生效`yarn cache dir`，默认是在`/usr/local/share/.cache`
 
 ## Python3
 
@@ -670,6 +676,20 @@ ssserver -c shadowsocks.json
 # 后台运行
 ssserver -c shadowsocks.json -d start
 ssserver -c shadowsocks.json -d stop
+```
+
+## zsh
+
+```
+yum install -y zsh
+chsh -s /bin/zsh
+sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+```
+
+在`~/.zshrc`中改下主题
+
+```
+ZSH_THEME="bureau"
 ```
 
 ## 升级 Git
