--- a/_posts/2019-03-08-docker的使用.md
+++ b/_posts/2019-03-08-docker的使用.md
@@ -135,6 +135,12 @@ docker login --username=177****@qq.com registry.cn-hangzhou.aliyuncs.com
 docker push registry.cn-hangzhou.aliyuncs.com/xxx/xxx:v1.0
 ```
 
+或者修改`/etc/conf.d/docker`文件也可以达到目的
+
+```
+DOCKER_OPTS="-H unix:///var/run/docker.sock -H tcp://0.0.0.0:2375 --registry-mirror=https://hub-mirror.c.163.com"
+```
+
 ## image 相关命令
 
 Docker 把应用程序及其依赖打包在 image 文件里面。
