--- a/_posts/2021-09-01-php镜像安装模块.md
+++ b/_posts/2021-09-01-php镜像安装模块.md
@@ -40,9 +40,11 @@ docker-php-ext-install calendar
 
 docker-php-ext-install exif
 
-apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev
-docker-php-ext-configure gd --with-freetype --with-jpeg
+apt-get install -y libjpeg-dev libjpeg62-turbo-dev libwebp-dev libpng-dev libfreetype6-dev libxpm-dev
+docker-php-ext-configure gd --with-webp-dir=/usr/include --with-png-dir=/usr/include \
+--with-jpeg-dir=/usr/include --with-freetype-dir=/usr/include --with-xpm-dir=/usr/include
 docker-php-ext-install gd
+# php -r "var_dump(gd_info());"
 
 docker-php-ext-install gettext
 
@@ -73,6 +75,11 @@ cd ..
 rm -rf ./*
 apt-get clean
 apt-get autoclean
+
+# 使用生产配置
+cd $PHP_INI_DIR
+cp php.ini-production php.ini
+history -c
 exit
 ```
 
