--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -796,7 +796,12 @@ Hook 是函数组件的拓展，在函数组件中使用 Hook 可以达到和 cl
 
 - useState
 
-  返回一个数组，第一个是值，第二个是更新函数。状态改变时候，函数式组件会被重新调用重新渲染，在重复渲染时会保留这个 state。在一个函数组件 useState 可以多次调用，创建多个 state，另外 useState 也可以传入对象和数组
+  ```
+  const [state, setState] = useState(initialState);
+  ```
+
+  返回一个数组，第一个是初始状态，第二个是状态更新函数。状态改变时候，函数式组件会被重新调用重新渲染，注意更新的过程可能不是同步的，而且多次更新可能会推迟到一起去执行，如果新的 state 需要通过使用先前的 state 计算得出，可以传一个函数，函数的第一个参数是最新的 state
+  当 setState 传入对象时和 class 组件中的 setState 方法不同，并不会合并内容，因此要传入一个完整的 state。
 
 - useEffect
 
