--- a/_posts/2019-02-23-vue插件编写.md
+++ b/_posts/2019-02-23-vue插件编写.md
@@ -22,11 +22,11 @@ categories: [前端]
 
 这里以一个 toast 插件为例
 
-```
+```vue
 <template>
   <transition name="slideup">
     <div v-show="active">
-      <span>{{text}}</span>
+      <span>{{ text }}</span>
     </div>
   </transition>
 </template>
@@ -35,42 +35,42 @@ export default {
   data() {
     return {
       active: false,
-      text: " "
-    };
+      text: ' '
+    }
   },
   methods: {
     show(text) {
       if (text) {
-        this.text = text;
+        this.text = text
       }
-      this.active = true;
-      setTimeout(() => this.hide(), 2000);
+      this.active = true
+      setTimeout(() => this.hide(), 2000)
     },
     hide() {
-      this.active = false;
+      this.active = false
       // 结束动画时间, 记得销毁
-      setTimeout(() => this.$destroy(), 350);
+      setTimeout(() => this.$destroy(), 350)
     }
   },
   destroyed() {
     // 销毁时候移除DOM
-    document.body.removeChild(this.$el);
+    document.body.removeChild(this.$el)
   },
   install(Vue) {
     // 创建组件
-    const VueToast = Vue.extend(this);
+    const VueToast = Vue.extend(this)
     // 导出方法到Vue.prototype
     Vue.prototype.$toast = params => {
       // 创建实例
-      var toast = new VueToast();
+      var toast = new VueToast()
       // 渲染生成html，toast.$el
-      toast.$mount();
+      toast.$mount()
       // html放到dom上
-      document.body.appendChild(toast.$el);
-      toast.show(params);
-    };
+      document.body.appendChild(toast.$el)
+      toast.show(params)
+    }
   }
-};
+}
 </script>
 ```
 
@@ -82,7 +82,7 @@ export default {
 
 ## Toast 插件使用
 
-```
+```js
 import Toast from './components/Toast.vue'
 Vue.use(Toast)
 ```
@@ -97,16 +97,16 @@ Vue.use 注册一次即可在任何地方使用。多注册也不用担心 Vue.u
 
 此种的好处是不对组件干扰，也可以使用 Vue.extend 对组件进行拓展
 
-```
+```js
 import Toast from './components/Toast.js'
 Vue.use(Toast)
 ```
 
-```
+```vue
 <template>
   <transition name="slideup">
     <div v-show="active">
-      <span>{{text}}</span>
+      <span>{{ text }}</span>
     </div>
   </transition>
 </template>
@@ -115,25 +115,25 @@ export default {
   data() {
     return {
       active: false,
-      text: " "
-    };
+      text: ' '
+    }
   },
   methods: {
     show(text) {
       if (text) {
-        this.text = text;
+        this.text = text
       }
-      this.active = true;
+      this.active = true
     },
     hide() {
-      this.active = false;
+      this.active = false
     }
   }
-};
+}
 </script>
 ```
 
-```
+```js
 import Toast_Vue from './Toast.vue'
 
 const Toast = {
@@ -141,7 +141,7 @@ const Toast = {
     // 返回构造器
     let creater = Vue.extend(Toast_Vue)
     function toast(param) {
-      let instance = new creater()
+      let instance = new creater({ propsData: {} }) // propsData 组件的props
       instance.$mount()
       instance.text = param
       document.body.appendChild(instance.$el)
@@ -157,5 +157,4 @@ const Toast = {
 }
 
 export default Toast
-
 ```
