--- a/_posts/2022-02-13-apisix-证书自动化.md
+++ b/_posts/2022-02-13-apisix-证书自动化.md
@@ -6,7 +6,7 @@ categories: [Linux]
 
 最近在做一个 SASS 服务，为了防止用户上传违法信息导致域名被封，需要用户主动绑定自己的域名。绑定域名后，系统需要自动添加路由，自动申请 ssl 证书。
 
-调研下来发现 [apisix](https://github.com/apache/apisix) 这个开源的网关刚好支持通过 api 去动态添加路由和证书。对于申请 免费的 ssl 证书一般都是使用[acme.sh](https://github.com/acmesh-official/acme.sh)
+调研下来发现 [apisix](https://github.com/apache/apisix) 这个开源的网关刚好支持通过调用 [api](https://apisix.apache.org/zh/docs/apisix/admin-api) 去动态添加路由和证书。对于申请 免费的 ssl 证书一般都是使用[acme.sh](https://github.com/acmesh-official/acme.sh)
 
 ## 证书申请
 
@@ -43,9 +43,9 @@ acme 生成证书分为两种方式
 
 4. 调用 APISIX 接口导入 SSL 证书
 
-   注意这里有个坑，调用导入证书接口时需要传入证书的`start_time`和`end_time`，否则在 APISIX Dashboard 中查看证书会看不到过期时间时间。所以需要对证书做解析，识别出 sni 和有效时间
+   注意这里有个坑，导入证书接口文档没有说明需要传入证书的`start_time`和`end_time`，但是[Models](https://apisix.apache.org/zh/docs/dashboard/api/api/#ssl)里面又有，最好还是传下这两个参数，否则在 APISIX Dashboard 中查看证书会看不到过期时间时间。
 
-   `openssl x509 -text -noout -in xxx.cer`
+   可以使用`openssl x509 -text -noout -in xxx.cer`命令解析出证书的 sni 和有效时间
 
    因此可以写一个 RESTful 服务和 APISIX 部署在一个网络内，在服务启动时把自己的注册到 APISIX 中，然后实现以上功能即可
 
